--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:urmitiwari1118@gmail.com">urmitiwari1118@gmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/urmi-tiwari" target="_blank">linkedin.com/in/urmi-tiwari</a></p>
+        <p>GitHub: <a href="https://github.com/urmidotjs" target="_blank">github.com/urmidotjs</a></p>
     </section>
 
     <!-- Footer Section -->
