--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <ul>
             <li><strong>Programming Languages:</strong> C, C++, Python, Java</li>
             <li><strong>Web Technologies:</strong> HTML, CSS, JavaScript, React.js</li>
-            <li><strong>Database:</strong> SQL</li>
+            <li><strong>Database:</strong> MySQL</li>
             <li><strong>Concepts:</strong> Object-Oriented Programming (OOP), DBMS, OS, SDE, Networking</li>
         </ul>
     </section>
