--- a/index.html
+++ b/index.html
@@ -164,17 +164,33 @@
     </section>
 
     <!-- Experience Section -->
-    <section class="container section" id="experience">
-        <h2>Experience</h2>
-        <ul>
-            <li><strong>Summer Intern</strong> - Northern Railway Rolling Stock Workshop Charbagh, Lucknow (Jun 2024 - Jul 2024)
-                <ul>
-                    <li>Developed software to manage employee service records and salary data entry.</li>
-                    <li>Conducted data feeding for employee payroll systems, enhancing accuracy and efficiency.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
+   <section class="container section" id="experience">
+    <h2>Experience</h2>
+    <ul>
+        <li>
+            <strong>Summer Intern</strong> - Northern Railway Rolling Stock Workshop Charbagh, Lucknow 
+            (Jun 2024 - Jul 2024)
+            <ul>
+                <li>Developed software to manage employee service records and salary data entry.</li>
+                <li>Conducted data feeding for employee payroll systems, enhancing accuracy and efficiency.</li>
+                <li>
+                    View Internship Certificate: 
+                    <a href="https://www.linkedin.com/posts/urmi-tiwari_rollingstockworkshop-northernrailways-internship-activity-7223966662838960128-dRYT?utm_source=share&utm_medium=member_desktop" 
+                       target="_blank">
+                        Click here
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <strong>Associate Recruiter</strong> - eTeam (On-Campus Selection, Nov 2024)
+            <ul>
+                <li>Secured the role through competitive hiring, demonstrating communication and problem-solving skills.</li>
+            </ul>
+        </li>
+    </ul>
+</section>
+
 
     <!-- Projects Section -->
     <section class="container section" id="projects">
@@ -182,21 +198,36 @@
         <ul>
             <li><strong>Employee Service Record Software:</strong> System to store and manage employee service details.</li>
             <li><strong>Salary Data Feeding System:</strong> Automated data entry for payroll, reducing processing time.</li>
+            <li>
+    <a href="https://urmidotjs.github.io/StackForge/" target="_blank">
+        <strong>StackForge</strong> A web application offering free resources to learn web development.
+    </a>
+</li>
+
+            <li>
+            <a href="https://urmidotjs.github.io/NextGenResume/" target="_blank">
+                <strong>NextGenResume:</strong>
+            </a> 
+            Python-based tool for automated PDF resume creation.
+        </li>
         </ul>
     </section>
 
     <!-- Contact Section -->
     <section class="container section contact" id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:urmitiwari1118@gmail.com">urmitiwari1118@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/urmi-tiwari" target="_blank">linkedin.com/in/urmi-tiwari</a></p>
-        <p>GitHub: <a href="https://github.com/urmidotjs" target="_blank">github.com/urmidotjs</a></p>
-    </section>
+    <h2>Contact</h2>
+    <p>Contact no: <a href="tel:+918436974814">+91 8436974814</a></p>
+    <p>Email: <a href="mailto:urmitiwari1118@gmail.com">urmitiwari1118@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/urmi-tiwari" target="_blank">linkedin.com/in/urmi-tiwari</a></p>
+    <p>GitHub: <a href="https://github.com/urmidotjs" target="_blank">github.com/urmidotjs</a></p>
+</section>
+
 
     <!-- Footer Section -->
-    <footer>
-        <p>© 2024 Urmi Tiwari</p>
-    </footer>
+   <footer>
+    <p>© 2024 <a href="https://github.com/urmidotjs" target="_blank">Urmi Tiwari</a></p>
+</footer>
+
 
 </body>
 </html>
