--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@
             <li><strong>Salary Data Feeding System:</strong> Automated data entry for payroll, reducing processing time.</li>
             <li>
     <a href="https://urmidotjs.github.io/StackForge/" target="_blank">
-        <strong>StackForge</strong> A web application offering free resources to learn web development.
-    </a>
-</li>
+        <strong>StackForge</strong> 
+    </a> 
+                A Web Application offering free resources to learn Web Development.
+    </li>
 
             <li>
             <a href="https://urmidotjs.github.io/NextGenResume/" target="_blank">
