--- a/index.html
+++ b/index.html
@@ -196,14 +196,13 @@
     <section class="container section" id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Employee Service Record Software:</strong> System to store and manage employee service details.</li>
-            <li><strong>Salary Data Feeding System:</strong> Automated data entry for payroll, reducing processing time.</li>
-            <li>
-    <a href="https://urmidotjs.github.io/StackForge/" target="_blank">
-        <strong>StackForge</strong> 
-    </a> 
-                A Web Application offering free resources to learn Web Development.
-    </li>
+           <li>
+           <a href="https://urmidotjs.github.io/StackForge/" target="_blank">
+              <strong>StackForge:</strong>
+            </a>
+            A Web Application offering free resources to learn Web Development.
+        </li>
+
 
             <li>
             <a href="https://urmidotjs.github.io/NextGenResume/" target="_blank">
