--- a/index.html
+++ b/index.html
@@ -164,9 +164,24 @@
     </section>
 
     <!-- Experience Section -->
-   <section class="container section" id="experience">
+<section class="container section" id="experience">
     <h2>Experience</h2>
     <ul>
+        <li>
+            <strong>Web Development Intern</strong> - CodeClause 
+            (Ongoing)
+            <ul>
+                <li>Gained hands-on experience in front-end and back-end web development.</li>
+                <li>Working on building responsive and user-friendly web applications.</li>
+                <li>
+                    View Internship Offer Letter: 
+                    <a href="https://www.linkedin.com/posts/urmi-tiwari_codeclauseofferletter-activity-7268645434179411968-Jtx4?utm_source=share&utm_medium=member_desktop" 
+                       target="_blank">
+                        Click here
+                    </a>
+                </li>
+            </ul>
+        </li>
         <li>
             <strong>Summer Intern</strong> - Northern Railway Rolling Stock Workshop Charbagh, Lucknow 
             (Jun 2024 - Jul 2024)
