--- a/index.html
+++ b/index.html
@@ -143,15 +143,16 @@
     </section>
 
     <!-- Skills Section -->
-    <section class="container section" id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Programming Languages:</strong> C, C++, Python, Java</li>
-            <li><strong>Web Technologies:</strong> HTML, CSS, JavaScript, React.js</li>
-            <li><strong>Database:</strong> MySQL</li>
-            <li><strong>Concepts:</strong> Object-Oriented Programming (OOP), DBMS, OS, SDE, Networking</li>
-        </ul>
-    </section>
+<section class="container section" id="skills">
+    <h2>Skills</h2>
+    <ul>
+        <li><strong>Programming Languages:</strong> C, C++, Python, Java</li>
+        <li><strong>Web Technologies:</strong> HTML, CSS, JavaScript, React.js, Node.js, Express.js,RESTful APIs, Authentication (JWT, OAuth)</li>
+        <li><strong>Database:</strong> MySQL, MongoDB</li>
+        <li><strong>Concepts:</strong> Object-Oriented Programming (OOP), DBMS, OS, SDE, Networking</li>
+    </ul>
+</section>
+
 
     <!-- Education Section -->
     <section class="container section" id="education">
@@ -168,7 +169,7 @@
     <h2>Experience</h2>
     <ul>
         <li>
-            <strong>Web Development Intern</strong> - CodeClause 
+            <strong>Web Developer Intern</strong> - CodeClause 
             (Ongoing)
             <ul>
                 <li>Gained hands-on experience in front-end and back-end web development.</li>
@@ -186,7 +187,7 @@
             <strong>Summer Intern</strong> - Northern Railway Rolling Stock Workshop Charbagh, Lucknow 
             (Jun 2024 - Jul 2024)
             <ul>
-                <li>Developed software to manage employee service records and salary data entry.</li>
+                <li>Worked on a software to manage employee service records and salary data entry.</li>
                 <li>Conducted data feeding for employee payroll systems, enhancing accuracy and efficiency.</li>
                 <li>
                     View Internship Certificate: 
