--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     A web app providing free learning resources for aspiring web developers.
                 </p>
                 <a href="https://urmidotjs.github.io/StackForge/" target="_blank">View Project</a>
-               </div>
+            </div>
             <div class="card">
                 <h3>Resume Builder</h3>
                 <p>
@@ -218,9 +218,17 @@
                 </p>
                 <a href="https://urmidotjs.github.io/NextGenResume/" target="_blank">View Project</a>
             </div>
+            <div class="card">
+                <h3>ChatNest</h3>
+                <p>
+                    A real-time chat application built to enable instant messaging with modern UI and features built during my Internship at CodeClause.
+                </p>
+                <a href="https://github.com/urmidotjs/CodeClauseInternship_ChatApplication" target="_blank">View Project</a>
+            </div>
         </div>
     </div>
 </section>
+
 
 <section id="contact">
     <div class="container">
